--- a/activity.html
+++ b/activity.html
@@ -35,22 +35,22 @@
         <div class="activity">
             <div class="lists">
                 <img class="list_img" src="./img/activity/activity1.png" alt="activity1">
-                <p class="list_text"> DALC(교내 AI 코딩동아리)<br>백엔드&기획 담당</p>
+                <p class="list_text">22.03.15~22.08.26(완료)<br>DALC(교내 AI 코딩동아리)<br>백엔드&기획 담당</p>
             </div>
 
             <div class="lists">
                 <img class="list_img" src="./img/activity/activity2.png" alt="activity2">
-                <p class="list_text"> 모두피움(스터디) </p>
+                <p class="list_text"> 22.08.28 ~ 22.12.19(완료)<br>모두피움(스터디) </p>
             </div>
 
             <div class="lists">
                 <img class="list_img" src="./img/activity/activity4.png" alt="activity3">
-                <p class="list_text"> 멋쟁이사자처럼 11기 <br>백엔드 담당</p>
+                <p class="list_text"> 23.03.26 ~<br>멋쟁이사자처럼 11기 <br>백엔드 담당</p>
             </div>
 
             <div class="lists">
                 <img class="list_img" src="./img/activity/activity3.png" alt="activity4">
-                <p class="list_text"> ICT 멘토링 한이음 <br>백엔드 담당</p>
+                <p class="list_text"> 23.04.01 ~<br>ICT 멘토링 한이음 <br>백엔드 담당</p>
             </div>
         </div>
     </div>
