--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
                 ❤️ &nbsp;github : <a href="https://github.com/hyun-jung-joo"
                     class="ct">https://github.com/hyun-jung-joo</a>
                 <br><br>
-                ❤️ &nbsp;email : <a href="joohyunjung0418@gmail.com" class="ct">joohyunjung0418@gmail.com</a><br>
+                ❤️ &nbsp;email : joohyunjung0418@gmail.com</a><br>
             </div>
         </h3>
     </div>
