--- a/about.html
+++ b/about.html
@@ -37,13 +37,13 @@
             <div class="contents">
                 🍒 &nbsp;이름 : 주현정 <br>
                 🍒 &nbsp;생일 : 2002.04.18 <br>
-                🍒 &nbsp;학과 : 컴퓨터학과 / 데이터사이언스학과(복수전공) <br>
                 🍒 &nbsp;나이 : 21살 <br>
                 🍒 &nbsp;학번 : 21학번 3학년 <br>
+                🍒 &nbsp;학과 : 컴퓨터학과 / 데이터사이언스학과(복수전공) <br>
                 🍒 &nbsp;MBTI : ESFJ , ESTJ <br>
                 🍒 &nbsp;성격 : 긍정적/현실적/활발함 <br><br>
             </div>
-            <strong>🍀 GOAL : 꼼꼼하고 다재다능한 훌륭한 개발자 🍀</strong><br>
         </h3>
     </div>
+    <h3 class="goal"><strong>🍀 GOAL : 꼼꼼하고 다재다능한 훌륭한 개발자 🍀</strong><br></h3>
     </body>
